--- a/src/pages/AboutMe/style.less
+++ b/src/pages/AboutMe/style.less
@@ -8,7 +8,7 @@
         width: 100%;
         position: relative;
         .aboutme-banner{
-            background: url(../../assets/images/bj3.jpg) center center / cover no-repeat;
+            background: url(../../assets/images/bz2.jpg) center center / cover no-repeat;
             position: absolute;
             background-color: #49b1f5!important;
             top: -60px;
