--- a/src/pages/Guestbook/style.less
+++ b/src/pages/Guestbook/style.less
@@ -1,5 +1,5 @@
 .guestbook{
-    background-image: url(../../assets/images/bj5.jpg);
+    background-image: url(../../assets/images/bz2.jpg);
     height: 100vh;
     /* 背景图片自适应 */
     background-attachment: fixed;
