--- a/src/pages/Home/Main/Aside/style.less
+++ b/src/pages/Home/Main/Aside/style.less
@@ -1,7 +1,7 @@
 .aside{
     display: block!important;
     flex: 0 0 25%;
-    max-width: 25%;
+    // max-width: 25%;
     width: 100%;
     padding: 7.5px;
     .aside-div{
