--- a/src/app.less
+++ b/src/app.less
@@ -12,5 +12,10 @@
         top: 0;
         z-index: 5;
         transition: all .5s;
+        height:60px;
+        margin-top:0px;
+        transform:translateY(0px);
+        left:0px;
+        right:0px;
     }
 }
